<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clock_reminder" />

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/add_reminder_date"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/date"
                app:layout_constraintEnd_toStartOf="@id/date"
                app:layout_constraintTop_toTopOf="@id/date" />

            <TextView
                android:id="@+id/lblStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/starting_date"
                android:textColor="@color/grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblDate" />

            <TextView
                android:id="@+id/txtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/lblStartDate"
                app:layout_constraintTop_toTopOf="@id/lblStartDate" />

            <TextView
                android:id="@+id/lblStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/time"
                android:textColor="@color/grey_700"
                app:layout_constraintStart_toEndOf="@id/txtStartTime"
                app:layout_constraintTop_toTopOf="@id/txtStartTime" />

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblStartDate" />

            <TextView
                android:id="@+id/lblEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/end_date"
                android:textColor="@color/grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtStartDate" />

            <TextView
                android:id="@+id/txtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/lblEndDate"
                app:layout_constraintTop_toTopOf="@id/lblEndDate" />

            <TextView
                android:id="@+id/lblEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/time"
                android:textColor="@color/grey_700"
                app:layout_constraintStart_toEndOf="@id/txtEndTime"
                app:layout_constraintTop_toTopOf="@id/txtEndTime" />

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblEndDate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notification" />

            <TextView
                android:id="@+id/lblReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/reminder_date"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/reminder"
                app:layout_constraintEnd_toStartOf="@id/reminder"
                app:layout_constraintTop_toTopOf="@id/reminder" />

            <TextView
                android:id="@+id/lblReminderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/date"
                android:textColor="@color/grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblReminder" />

            <TextView
                android:id="@+id/txtReminderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/lblReminderDate"
                app:layout_constraintTop_toTopOf="@id/lblReminderDate" />

            <TextView
                android:id="@+id/lblReminderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/time"
                android:textColor="@color/grey_700"
                app:layout_constraintStart_toEndOf="@id/txtReminderTime"
                app:layout_constraintTop_toTopOf="@id/txtReminderTime" />

            <TextView
                android:id="@+id/txtReminderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblReminderTime" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_event" />

            <TextView
                android:id="@+id/lblEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/event_type"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/event"
                app:layout_constraintEnd_toStartOf="@id/event"
                app:layout_constraintTop_toTopOf="@id/event" />


            <TextView
                android:id="@+id/txtEventType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lblEvent"
                app:layout_constraintTop_toTopOf="@id/lblEvent"
                android:layout_marginEnd="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/lblLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/meeting_location"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/location"
                app:layout_constraintEnd_toStartOf="@id/location"
                app:layout_constraintTop_toTopOf="@id/location" />


            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/lblLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblLocation"
                android:layout_marginEnd="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_contact" />

            <TextView
                android:id="@+id/lblGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/related_persons"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/group"
                app:layout_constraintEnd_toStartOf="@id/group"
                app:layout_constraintTop_toTopOf="@id/group" />

            <TextView
                android:id="@+id/txtAddPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/red_500"
                app:layout_constraintEnd_toStartOf="@id/lblGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblGroup"
                android:text="@string/choose_related_people"
                android:layout_marginEnd="20dp"
                android:visibility="gone"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layoutDirection="rtl"
                android:layout_marginTop="12dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/btnAddPeople"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    app:chipBackgroundColor="@color/light_green_500"
                    android:textAppearance="@style/TextCaptionStyle"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    app:closeIconEnabled="true"
                    app:closeIcon="@drawable/ic_borderless_add"
                    app:checkedIconEnabled="false"/>
            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>